# SDL2_gfxPrimitives

./: CMakeLists.txt
include/: SDL2_gfxPrimitives.h  SDL2_gfxPrimitives_font.h  SDL2_rotozoom.h  SDL2_rotozoom.hpp
src/: SDL2_gfxPrimitives.c  SDL2_gfxPrimitives.cpp  SDL2_rotozoom.c  SDL2_rotozoom.cpp  vector2.hpp
